# rate-limiter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  tests.py
accounts/api/v1/: urls.py  wallets.py
accounts/api/v1/serializers/: __init__.py  wallets.py
accounts/api/v1/views/: __init__.py  wallets.py
accounts/migrations/: 0001_initial.py  0002_alter_wallet_user.py
accounts/models/: __init__.py  wallets.py
accounts/services/: rate_limiter.py
accounts/signals/: __init__.py  users.py
config/: exception_handler.py  middlewares.py  schema.py  settings.py  urls.py
