[project]
name = "rate-limiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "pre-commit>=4.6.0",
    "redis>=7.0.0",
    "django-redis>=5.0.0",
]
